# law_search

./: API_SPEC.md  ARCHITECTURE.md  DEVELOPMENT_GUIDE.md  MVP_REQUIREMENTS.md  PROCESS_SPEC.md  PROJECT_SPEC.md  README.md  docker-compose.yml  env.example  main.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
config/: development.yaml
docker/: Dockerfile
scripts/: data_download.sh  data_pipeline.py  init_db.sh  lint.sh  setup.sh  test.sh
src/: main.py
src/api/endpoints/: health.py  laws.py  search.py
src/core/data/: collector.py  database_manager.py  embedding_generator.py  parser.py  processor.py
src/core/utils/: config_loader.py
tests/integration/: test_data_pipeline.py
tests/unit/: test_config_loader.py  test_data_collector.py  test_data_parser.py
